@@ -1,5 +1,13 @@
 2012-11-12  Filip Pizlo  <fpizlo@apple.com>
 
+        Unreviewed, fix ARMv7 build.
+
+        * assembler/MacroAssemblerARMv7.h:
+        (JSC::MacroAssemblerARMv7::startOfPatchableBranchPtrWithPatch):
+        (JSC::MacroAssemblerARMv7::revertJumpReplacementToPatchableBranchPtrWithPatch):
+
+2012-11-12  Filip Pizlo  <fpizlo@apple.com>
+
         Patching of jumps to stubs should use jump replacement rather than branch destination overwrite
         https://bugs.webkit.org/show_bug.cgi?id=101909
 
